# Bookclaw

./: .gitignore  README.md  main.py  mcp_config.example.yaml  pyproject.toml  server.py
agent/: __init__.py  context.py  graph.py  states.py
agent/prompts/: system_prompt.md
agent/tools/: __init__.py  base.py  calculator.py  current_time.py  get_skill.py  get_weather.py  mcp_tool.py  rag.py  register.py  subagent.py  web_search.py
books/: .gitkeep
memory/: SOUL.md  user_preferences.md
rag/: __init__.py  api_server.py  embedding.py  file_reader.py  incremental.py  processor.py  text_chunker.py  vector_store.py
rag_data/: file_hashes.json
skills/: calculator.md  chrome-search.md  document_search.md  document_update.md  reporter.md
static/: index.html
